# semfora-engine

./: .gitignore  .mcp.json  Cargo.toml  PLAN_VARIABLE_TRACKING.md  QUICKSTART.md  README.md  benchmark-mcp-calls.sh  call-graph-demo.html
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  semfora-ci.yml
.pm/: config.yaml
benches/: incremental.rs  indexing.rs  lsp_comparison.rs  queries.rs
docs/: PHASE2_MCP_CONSOLIDATION.md  SECURITY_ARCHITECTURE_AUDIT.md  SECURITY_ARCHITECTURE_TRAINING.md  adding-languages.md  architecture.md  cli-mcp-audit-2025-12-18.md  cli.md  codebase-analysis-report.md  command-reference.md  engineering.md  features.md  framework-entry-points-targets.md  lsp-comparison-summary.md  mcp-server-improvements-2025-12-13.md  mcp-tools-reference.md  mcp-troubleshooting.md  mcp-workflows.md  plan-subagent-installer.md  plan.md  quickstart.md  react-detection-audit.md  security-analysis.md  semfora-agent-architecture.md  trace-plan.md  websocket-daemon.md
docs/plans/: agent-workflow-improvements.md  conflict-aware-module-naming.md  react-patterns-implementation.md
examples/: layer_cache_demo.rs
queries/bash/: locals.scm
queries/c/: locals.scm
queries/c_sharp/: locals.scm
queries/cpp/: locals.scm
queries/go/: locals.scm
queries/groovy/: locals.scm
queries/hcl/: locals.scm
queries/java/: locals.scm
queries/javascript/: locals.scm
queries/kotlin/: locals.scm
queries/python/: locals.scm
queries/rust/: locals.scm
queries/tsx/: locals.scm
queries/typescript/: locals.scm
repo-compare-website/: index.html  package-lock.json  package.json
repo-compare-website/src/: App.tsx  index.css
scripts/: perf-test.py
src/: analysis.rs  benchmark.rs  bm25.rs  cache.rs  cli.rs  drift.rs  error.rs  extract.rs  fs_utils.rs  lang.rs  lib.rs  lint_runner.rs  main.rs  module_registry.rs  overlay.rs  paths.rs  ripgrep.rs  risk.rs  schema.rs  search.rs  shard.rs  sqlite_export.rs  test_runner.rs  toon.rs  trace.rs
src/benchmark_builder/: bin.rs  generator.rs  mod.rs  runner.rs  snapshot.rs  templates.rs  types.rs
src/cache/: mod.rs  signatures.rs
src/commands/: analyze.rs  cache.rs  commit.rs  index.rs  lint.rs  mod.rs  query.rs  search.rs  security.rs  serve.rs  test.rs  toon_parser.rs  trace.rs  validate.rs
src/detectors/: c_family.rs  common.rs  config.rs  csharp.rs  dockerfile.rs  generic.rs  go.rs  grammar.rs  hcl.rs  java.rs  locals.rs  markup.rs  mod.rs  python.rs  rust.rs  variable_refs.rs
src/duplicate/: boilerplate.rs  mod.rs
src/git/: branch.rs  commit.rs  diff.rs  mod.rs
src/indexing/: generation.rs
src/installer/: config.rs  mod.rs  uninstall.rs  wizard.rs
src/lint/: cache.rs  mod.rs  runner.rs  types.rs  version.rs
src/mcp_server/: bin.rs  formatting.rs  helpers.rs  instructions.rs  instructions_compact.rs  instructions_complete.rs  instructions_fast.rs  mod.rs  types.rs
src/parsing/: mod.rs
src/security/: mod.rs
src/server/: ast_cache.rs  events.rs  git_poller.rs  mod.rs  state.rs  sync.rs  watcher.rs
src/socket_server/: bin.rs  connection.rs  indexer.rs  mod.rs  protocol.rs  repo_registry.rs  worktree.rs
test-ui/: index.html
tests/: cli_mcp_parity.rs  integration_tests.rs  test_python_test_detection.rs  test_schema_enrichment.rs  test_sqlite_schema_enrichment.rs
tests/cli/: analyze_tests.rs  cache_tests.rs  commit_tests.rs  index_tests.rs  lint_tests.rs  mod.rs  query_tests.rs  search_tests.rs  security_tests.rs  setup_tests.rs  test_tests.rs  validate_tests.rs
tests/common/: assertions.rs  mod.rs  test_repo.rs
tests/edge_cases/: error_handling_tests.rs
tests/formats/: consistency_tests.rs
tests/languages/: config_family.rs  dotnet_family.rs  infrastructure_family.rs  javascript_family.rs  jvm_family.rs  (+4 more)
(+96 files in other folders)
