[package]
name = "mcp-diff"
version = "0.1.0"
edition = "2021"
description = "Semantic code analyzer with TOON output"
license = "MIT"

[[bin]]
name = "mcp-diff"
path = "src/main.rs"

[[bin]]
name = "mcp-diff-server"
path = "src/mcp_server/bin.rs"

[dependencies]
# Core parsing
tree-sitter = "0.24"

# Language grammars - Programming languages
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"

# Language grammars - Markup & Config
tree-sitter-html = "0.23"
tree-sitter-css = "0.21"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.6"
tree-sitter-toml-ng = "0.6"
tree-sitter-md = "0.3"

# CLI & Error handling
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"

# Serialization (for JSON output format)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rtoon = "0.2.1"

# MCP Server dependencies
rmcp = { version = "0.9", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
schemars = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tempfile = "3.8"
