[package]
name = "semfora-engine"
version = "0.1.0"
edition = "2021"
description = "Semantic code analyzer with TOON output"
license = "MIT"

[[bin]]
name = "semfora-engine"
path = "src/main.rs"

[[bin]]
name = "semfora-engine-server"
path = "src/mcp_server/bin.rs"

[[bin]]
name = "semfora-daemon"
path = "src/socket_server/bin.rs"

[dependencies]
# Core parsing
tree-sitter = "0.25"

# Language grammars - Programming languages
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"

# Language grammars - Markup & Config
tree-sitter-html = "0.23"
tree-sitter-css = "0.21"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.6"
tree-sitter-toml-ng = "0.6"
tree-sitter-md = "0.3"

# Additional language grammars
tree-sitter-kotlin-ng = "1.1"
tree-sitter-bash = "0.23"
tree-sitter-scss = "1.0"
tree-sitter-hcl = "1.1"
tree-sitter-xml = "0.7"
tree-sitter-groovy = "0.1"
# Note: protobuf crate conflicts with tree-sitter 0.24, skipped for now

# CLI & Error handling
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"

# Serialization (for JSON output format)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rtoon = "0.2.1"

# MCP Server dependencies
rmcp = { version = "0.9", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
schemars = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cache and sharding
chrono = "0.4"
dirs = "5.0"

# Ripgrep integration (SEM-46)
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
ignore = "0.4"
ordered-float = "4.2"

# Thread-safe layer management (SEM-99)
parking_lot = "0.12"

# File system watching (SEM-101)
notify = "7.0"
notify-debouncer-mini = "0.5"

# Socket server dependencies (Phase 3)
tokio-tungstenite = "0.24"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
memory-stats = "1.1"
sysinfo = "0.31"

[[bench]]
name = "indexing"
harness = false

[[bench]]
name = "queries"
harness = false

[[bench]]
name = "incremental"
harness = false
